--- a/inst/rmarkdown/templates/thesis/skeleton/preamble.tex
+++ b/inst/rmarkdown/templates/thesis/skeleton/preamble.tex
@@ -1,7 +1,8 @@
 \newcommand{\yeardegree}{ 2019 } \newcommand{\degree}{ Maestria en Ciencias }
  \newcommand{\degreetitle}{ Maestro en Ciencias }
  \newcommand{\field}{ Ciencias de la Computación }
- \newcommand{\chairperson}{ Advisor }
+ \newcommand{\advisor}{ Advisor }
+ \newcommand{\coadvisor}{ Coadvisor }
  \newcommand{\committeeone}{ Committee Member 1 }
  \newcommand{\committeetwo}{ Committee Member 2 }
  \newcommand{\committeethree}{ Committee Member 3 }
