--- a/inst/rmarkdown/templates/thesis/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/thesis/skeleton/skeleton.Rmd
@@ -1,7 +1,7 @@
 ---
 documentclass: dissertateCICESE
-title: "Predicción de sitios de acoplamiento de factores de transcripción a partir del perfil de activación de la histona H3K27ac"
-author: "César Miguel Valdez Córdova"
+title: "Your Title"
+author: "Your Name"
 date: "December 11, 2018"
 output:
     pdf_document:
@@ -9,19 +9,20 @@ output:
           includes:
               in_header: preamble.tex
           keep_tex: yes
-geometry: [top=1in, bottom=1in, right=1in, left=1.5in]
 params:
   year: '2019'
-  degree: 'Maestria en Ciencias'
-  degreetitle: "Maestro en Ciencias"
-  field: 'Ciencias de la Computación'
+  degree: 'Degree type'
+  degreetitle: "Degree conferred to you"
+  field: 'Area'
   advisor: 'Advisor'
   coadvisor: "Coadvisor"
   committee1: 'Committee Member 1'
   committee2: 'Committee Member 2'
   committee3: 'Committee Member 3'
   coordinator: 'Program Coordinator'
-  director: 'director'
+  director: 'Director'
+geometry: [top=0.8in, bottom=0.8in, right=0.8in, left=1.18in]
+mainfont: OpenSans
 ---
 
 ```{r global_options, include=FALSE}
@@ -46,18 +47,6 @@ dissertateCICESE::preamble_for_title()
 \fancyfoot[C]{}
 \chapter*{ABSTRACT}
 \addcontentsline{toc}{section}{Abstract}
-
-Abstract words.
-
-<!-- Public Abstract -->
-\newpage
-\fancyhead[L]{Public Abstract}
-\fancyhead[R]{\thepage}
-\fancyfoot[C]{}
-\chapter*{PUBLIC ABSTRACT}
-\addcontentsline{toc}{section}{Public Abstract}
-
-Publically abstracted words.
 
 <!-- Dedication -->
 \newpage
@@ -165,7 +154,21 @@ Well done.
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
+\chapter*{Appendixes}
+
+Additional stuff
+
+\FloatBarrier
+
+\newpage
+\fancyhead[L]{References}
+\fancyhead[R]{\thepage}
+\fancyfoot[C]{}
+\addcontentsline{toc}{section}{Appendixes}
+
+
 \chapter*{REFERENCES}
+\addcontentsline{toc}{section}{References}
 
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.4in}
