--- a/inst/rmarkdown/templates/thesis/skeleton/skeleton.tex
+++ b/inst/rmarkdown/templates/thesis/skeleton/skeleton.tex
@@ -13,6 +13,7 @@
     \usepackage{fontspec}
   \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
+    \setmainfont[]{OpenSans}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -21,7 +22,7 @@
 \usepackage{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\usepackage[top=1in,bottom=1in,right=1in,left=1.5in]{geometry}
+\usepackage[top=0.8in,bottom=0.8in,right=0.8in,left=1.18in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Predicción de sitios de acoplamiento de factores de transcripción a partir del perfil de activación de la histona H3K27ac},
@@ -88,7 +89,8 @@ partir del perfil de activación de la histona H3K27ac}
 \newcommand{\yeardegree}{ 2019 } \newcommand{\degree}{ Maestria en Ciencias }
  \newcommand{\degreetitle}{ Maestro en Ciencias }
  \newcommand{\field}{ Ciencias de la Computación }
- \newcommand{\chairperson}{ Advisor }
+ \newcommand{\advisor}{ Advisor }
+ \newcommand{\coadvisor}{ Coadvisor }
  \newcommand{\committeeone}{ Committee Member 1 }
  \newcommand{\committeetwo}{ Committee Member 2 }
  \newcommand{\committeethree}{ Committee Member 3 }
@@ -119,17 +121,6 @@ partir del perfil de activación de la histona H3K27ac}
 \fancyfoot[C]{}
 \chapter*{ABSTRACT}
 \addcontentsline{toc}{section}{Abstract}
-
-Abstract words.
-
-\newpage
-\fancyhead[L]{Public Abstract}
-\fancyhead[R]{\thepage}
-\fancyfoot[C]{}
-\chapter*{PUBLIC ABSTRACT}
-\addcontentsline{toc}{section}{Public Abstract}
-
-Publically abstracted words.
 
 \newpage
 \fancyhead[L]{Dedication}
@@ -228,7 +219,20 @@ Well done.
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
+\chapter*{Appendixes}
+
+Additional stuff
+
+\FloatBarrier
+
+\newpage
+\fancyhead[L]{References}
+\fancyhead[R]{\thepage}
+\fancyfoot[C]{}
+\addcontentsline{toc}{section}{Appendixes}
+
 \chapter*{REFERENCES}
+\addcontentsline{toc}{section}{References}
 
 \setlength{\parindent}{-0.5in}
 \setlength{\leftskip}{0.4in}
