--- a/inst/rmarkdown/templates/thesis/skeleton/preamble.tex
+++ b/inst/rmarkdown/templates/thesis/skeleton/preamble.tex
@@ -1,13 +1,17 @@
-\newcommand{\yeardegree}{ 2019 } \newcommand{\degree}{ Maestria en Ciencias }
- \newcommand{\degreetitle}{ Maestro en Ciencias }
- \newcommand{\field}{ Ciencias de la Computación }
+\newcommand{\yeardegree}{ 2019 } \newcommand{\degree}{ Degree type }
+ \newcommand{\thesisauthor}{ Your Name }
+ \newcommand{\thesistitle}{ Your Title }
+ \newcommand{\degreetitle}{ Degree conferred to you }
+ \newcommand{\field}{ Area }
  \newcommand{\advisor}{ Advisor }
  \newcommand{\coadvisor}{ Coadvisor }
  \newcommand{\committeeone}{ Committee Member 1 }
  \newcommand{\committeetwo}{ Committee Member 2 }
  \newcommand{\committeethree}{ Committee Member 3 }
  \newcommand{\coordinator}{ Program Coordinator }
- \newcommand{\director}{ director }
+ \newcommand{\director}{ Director }
+ \newcommand{\keywords}{ Something, pretty, important }
+ \newcommand{\palabrasclave}{ Algo, muy, importante }
  % Tables
       \usepackage{booktabs}
       \usepackage{threeparttable}
